k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: reliability-lab
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: http
